bloodmallet/general_website/static/general_website/css/base.scss
// Something something introduction

// list of all class colors
$class-color-death-knight: #c41f3b;
$class-color-demon-hunter: #a330c9;
$class-color-druid: #ff7d0a;
$class-color-hunter: #abd473;
$class-color-mage: #69ccf0;
$class-color-monk: #00ff96;
$class-color-paladin: #f58cba;
$class-color-priest: #ffffff;
$class-color-rogue: #fff569;
$class-color-shaman: #0070de;
$class-color-warlock: #9482c9;
$class-color-warrior: #c79c6e;

$class-colors: () !default;
$class-colors: map-merge((
  "death_knight":   $class-color-death-knight,
  "demon_hunter":   $class-color-demon-hunter,
  "druid":          $class-color-druid,
  "hunter":         $class-color-hunter,
  "mage":           $class-color-mage,
  "monk":           $class-color-monk,
  "paladin":        $class-color-paladin,
  "priest":         $class-color-priest,
  "rogue":          $class-color-rogue,
  "shaman":         $class-color-shaman,
  "warlock":        $class-color-warlock,
  "warrior":        $class-color-warrior
), $class-colors);

$darkest-color: #232227;
$dark-color: #343a40;
$light-color: #999999;
$lightest-color: #f8f9fa;


$body-bg: $dark-color;
$body-color: $lightest-color;

$primary:       $class-color-shaman !default;
$secondary:     $light-color !default;
$success:       $class-color-monk !default;
$info:          $class-color-mage !default;
$warning:       $class-color-rogue !default;
$danger:        $class-color-death-knight !default;
$light:         $lightest-color !default;
$dark:          $dark-color !default;

$border-width:                1px;
$border-radius:               0rem !default;
$border-radius-lg:            0rem !default;
$border-radius-sm:            0rem !default;


// Links
//
// Style anchor elements.
$link-color:                lighten($primary, 15%) !default;
$link-decoration:           none !default;
$link-hover-color:          $primary !default;
$link-hover-decoration:     underline !default;

// General text
$font-size-base: 1.1rem;
$input-color: $lightest-color;
$input-bg: $darkest-color;
$input-border-color: $light-color;


@import "general_website/bootstrap/scss/bootstrap";

// container for primary page content
main {
    min-height: 93vh;
    bottom:0;
    right:0;
    left:0;
}
// bloodmallet hammer background image
#background_image {
    position: fixed;
    bottom: 80px;
    right: 40px;
    width: 40%;
    height: 25%;
    background-repeat: no-repeat;
    background-position: right;
    background-size: contain;
    z-index: -1;
    opacity: 0.2;
}
// container for bottom navigation
footer {
    width: 100%;
    position: relative;
    bottom: 0px;
    right: 0px;
    margin-top: 2em;
}
.top-nav, .bottom-nav {
    min-height: 6vh;
}
// Footer icons
.svg-icon {
    display: inline-block;
    padding-right: 0px;
    width: 23px;
    height: 23px;
    fill: currentColor;
    vertical-align: text-top;
}
a:hover .svg-icon {
    fill: currentColor;
}

.bg-dark {
    background-color: $darkest-color!important;
}

// hide brand name on medium screens to leave room for class options
// @media only screen and (max-width: 1499px) and (min-width: 990px) {
//     #brand-name {
//         display: none;
//     }
// }

.dropdown-menu {
    background-color: $darkest-color;
    padding: 0rem;
}
.dropdown-item:hover, .dropdown-item:focus {
    background-color: $darkest-color;
}

// create necessary class specific css for nav and tables
@each $class, $color-value in $class-colors {
    .#{$class}-color {
        color: $color-value!important;
    }
    .#{$class}-menu-border {
        // border-top: 3px solid transparent;
        border-bottom: 3px solid transparent;
        transition: border-bottom .05s ease-in;
        &:hover {
            border-bottom: 3px solid $color-value;
            transition: border-bottom .0s ease-in;
        }
        &:active {
            border-bottom: 3px solid $color-value;
        }
    }
    .#{$class}-menu-border.active {
        border-bottom: 3px solid $color-value;
    }
    .#{$class}-border-top {
        border-top: 3px solid $color-value;
    }
    .#{$class}-border-bottom {
        border-bottom: 3px solid $color-value;
    }

    // Hide the bottom border if the sub menu is active
    .show .#{$class}-menu-border:hover, .show .#{$class}-menu-border.active {
        border-bottom: 3px solid transparent;
    }

    .#{$class}-button {
        color: $color-value;
        border-right: 5px solid $darkest-color;
        border-left: 5px solid $darkest-color;
        transition: border .05s ease-in;
        &:hover, &:active {
            color: $color-value;
            border-left: 5px solid $color-value;
            transition: border .0s ease-in;
        }
    }
}

#navBarDataMenu {
    border-top: $border-width solid $light-color;
    visibility: visible;
    -webkit-animation: fadein_class_nav 0.5s;
    animation: fadein_class_nav 0.5s;
}

@-webkit-keyframes fadein_class_nav {
  from {top: -6vh; opacity: 0;}
  to {top: 0vh; opacity: 1;}
}

@keyframes fadein_class_nav {
  from {top: -6vh; opacity: 0;}
  to {top: 0vh; opacity: 1;}
}

